Remove phone number from index.html
Removed phone number from contact information.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
       <h1>Timothy D. Foster, M.A.</h1>
       <p>IT Instructor | AI & Cloud Educator | Tribal College Technology Leader</p>
-      <p>📞 928-221-4457 | ✉️ tdf101@gmail.com | 📍 Flagstaff, AZ</p>
+      | ✉️ tdf101@gmail.com | 📍 Flagstaff, AZ</p>
     </div>
   </header>
 
